# marti_ws

./: README.md
marti_bot/: package.xml
marti_bot/deskribapena/: deskribapena.xacro  lidar.xacro
marti_bot/launch/: rviz_launch.py  spawn_car.launch.py
src/marti_bot/: CMakeLists.txt
src/marti_bot/deskribapena/: gazebo_control.xacro  marti_bot.urdf.xacro
src/marti_bot/launch/: marti_gazebo.launch.py  nabegazioa.launch.py  rviz_robota.launch.py
src/marti_bot/params/: nav2_params.yaml
src/marti_bot/rviz/: nav2_default_view.rviz
src/marti_gazebo_plugina/: CMakeLists.txt  package.xml
src/marti_gazebo_plugina/src/: marti_gazebo_plugina.cpp  marti_gazebo_plugina.hpp
